Styling all elements

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
       <title>.:Billy Beer Website:.</title>
       <link rel="stylesheet" href="css/reset.css">
       <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="https://use.typekit.net/bkr7wcs.css">
 </head>
 <body>
       <h1 class="hidden">Welcome to Billy Beer website</h1>
       <div id="container">
-            <header id="main-header" class="grid">
+            <header id="main-header">
                   <h2 class="hidden">Main top header section</h2>
 
-                  <nav id="top-nav">
+                  <nav id="top-nav" class="grid">
                         <h3 class="hidden">Main Top Navigation Menu</h3>
 
                         <ul class="nav" id="top-nav-L">
@@ -24,58 +25,62 @@
                               <li><a href="#"></a>CONTACT US</li>
                         </ul>
                         
-                        <div id="main-logo" class="box-color">Main-logo</div>
+                        <div id="main-logo" class="box-color logo"><h4>Main-logo</h4></div>
 
-                        <ul> 
+                        <ul id="top-nav-R"> 
                               <li><a href="#"></a>FIND US</li>
                               <li><a href="#"></a>SEARCH</li>
-                              <div class="hamburger"></div>
+                              <li><a href="#"></a>REGISTER</li>
                         </ul> 
                   </nav>
             </header>
 
-            <main class="grid">
-                  <section id="main-hero">
+            <main>
+                  <section class="grid" id="main-hero">
                         <h3 class="hidden">Main top hero</h3>
                         <div class="hero-img" id="hero-1">
                               <h4 id="hero-text">Branding and Context</h4>
                         </div>
-                        <div class="hero-img" id="hero-2"></div>
+                        <div class="hero-img" id="hero-2">
+                              <h5>Hero image</h5></div>
                   </section>
 
-                  <section id="contact-us">
+                  <section class="grid" id="contact-us">
                         <h3 class="hidden">Contact information section</h3>
-                        <div class="box-color" id="contact-img"></div>
+                        <div class="box-color" id="contact-img"><h4>Image of Company</h4></div>
                         <div id="contact-text">
                               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
-                              text ever since the 1500s</p>
+                              text ever 
+                              since the 1500s</p>
                               <div class="button">Contact Us</div>
                         </div>
                   </section>
 
                   <section id="product-con">
                         <h3 class="hidden">Product contaents section</h3>
-                        <div>
-                              <div class="box-color" id="product-con-img"></div>
+                        <div class="grid">
+                              <div class="box-color" id="product-con-img"><h4>Image of Product</h4></div>
+                              <div id="product-con-text">
                               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
                               text ever since the 1500s</p>
-                              <span>- Billy Beer</span>>
+                              <h4>- Billy Beer</h4>
+                              </div>
                         </div>
 
-                        <div class="product-descrip">
-                              <div id="prod-1">
-                                    <div class="box-color"></div>
-                                    <h4 class="prod-name"></h4>
+                        <div class="grid product-descrip">
+                              <div id="prod-1" class="product-box">
+                                    <div class="box-color product-img"></div>
+                                    <h4 class="prod-name">TEXT FOR CONTEXT</h4>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                               </div>
-                              <div id="prod-2">
-                                    <div class="box-color"></div>
-                                    <h4 class="prod-name"></h4>
+                              <div id="prod-2" class="product-box">
+                                    <div class="box-color product-img"></div>
+                                    <h4 class="prod-name">TEXT FOR CONTEXT</h4>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                               </div>
-                              <div id="prod-3">
-                                    <div class="box-color"></div>
-                                    <h4 class="prod-name"></h4>
+                              <div id="prod-3" class="product-box">
+                                    <div class="box-color product-img"></div>
+                                    <h4 class="prod-name">TEXT FOR CONTEXT</h4>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                               </div>
                         </div>
@@ -83,10 +88,13 @@
             </main>
 
             <footer id="main-footer" class="grid">
-                  <h3 class="hidden">Main footer contents</h3>
-                  <div id="footer-logo"></div>
-                  <h4>BILLY BEER</h4>
-                  <nav>
+                  <h3 
+                  class="hidden">Main footer contents</h3>
+                  <div class="box-color logo" id="footer-logo">
+                        <h4>Logo</h4>
+                  </div>
+                  <h5>BILLY BEER</h5>
+                  <nav id="footer-nav">
                         <ul>
                               <li><a href="index.html"></a>HOME</li>
                               <li><a href="#"></a>OUR STORY</li>
