some minor changes on css and html
changes on css and html update

--- a/index-mobile.html
+++ b/index-mobile.html
@@ -56,7 +56,7 @@
                               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy 
                               text ever 
                               since the 1500s</p>
-                              <button id="contact-button"><a href="#">Contact Us</a></button>
+                              <button class="button-1">Contact Us</button>
                         </div>
                   </section>
 
@@ -73,9 +73,12 @@
 
                         <div class="grid product-descrip">
                               <div id="prod-1" class="product-box">
-                                    <div class="box-color product-img"></div>
-                                          <h4 class="prod-name">TEXT FOR CONTEXT</h4>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <div class="box-color product-img">
+                                          <h3>3d Image of Product</h3>
+                                    </div>
+
+                                    <button class="button-1">Text for Context</button>
+                                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                               </div>
                               <div id="prod-2" class="hidden">
                                     <div class="box-color product-img"></div>
@@ -92,14 +95,13 @@
             </main>
 
             <footer id="main-footer" class="grid">
-                  <h3 
-                  class="hidden">Main footer contents</h3>
+                  <h3 class="hidden">Main footer contents</h3>
                   <div class="box-color logo" id="footer-logo">
                         <h4>Logo</h4>
                   </div>
-                  <h5>BILLY BEER</h5>
+                  <h5 class="hidden">BILLY BEER</h5>
                   <nav id="footer-nav">
-                        <ul>
+                        <ul class="hidden">
                               <li><a href="index.html"></a>HOME</li>
                               <li><a href="#"></a>OUR STORY</li>
                               <li><a href="#"></a>CONTACT US</li>
