add a measurements textfile and put some svg icon in HTML

--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
                               <li><a href="#"></a>OUR STORY</li>
                               <li><a href="#"></a>CONTACT US</li>
                         </ul>
+                        <div class="svg-icon">
+                              <img src="images/facebook.svg" alt="facebook-logo">
+                              <img src="images/instagram.svg" alt="instagram-logo">
+                              <img src="images/twitter.svg" alt="twitter-logo">
+                        </div>
                   </nav>
             </footer>
 
